--- a/post.hbs
+++ b/post.hbs
@@ -6,7 +6,11 @@
 
     <header class="post-header">
       <div class="post-meta">
-        <time datetime="{{date format="DD MMM YYYY"}}" class="post-meta__date date">{{date format="DD MMM YYYY"}}</time> &#8226; <span class="post-meta__tags tags">{{tags prefix="于 "}}</span>
+        <time datetime="{{date format="DD MMM YYYY"}}" class="post-meta__date date">{{date format="DD MMM YYYY"}}</time>
+	<span class="post-meta__tags tags">
+	  <i class="fa fa-tags fa-1" style="font-size: inherit; margin-right: 5px;"></i> 
+	  {{tags}}
+	</span>
         <!--<span class="post-meta__author author"><img src="{{author.image}}" alt="profile image for {{author.name}}" class="avatar post-meta__avatar" /> by {{author.name}}</span>-->
       </div>
       <h1 class="post-title">{{{title}}}</h1>
