--- a/tag.hbs
+++ b/tag.hbs
@@ -12,8 +12,15 @@
         <h2 class="post-list__post-title post-title"><a href="{{url}}" title="link to {{{title}}}">{{{title}}}</a></h2>
         <p class="excerpt">{{excerpt characters="250"}}&hellip;</p>
         <div class="post-list__meta">
-            <time datetime="{{date format="DD MMM YYYY"}}" class="post-list__meta--date date">{{date format="DD MMM YYYY"}}</time> &#8226;
-            <span class="post-list__meta--tags tags">{{#foreach tags}}<a href="{{url}}#blog" title="{{name}}">{{name}}</a>{{#if @last}}{{else}}, {{/if}}{{/foreach}}</span><a class="btn-border-small" href={{url}}>继续阅读</a>
+            <time datetime="{{date format="DD MMM YYYY"}}" class="post-list__meta--date date">{{date format="DD MMM YYYY"}}</time>
+            <span class="post-list__meta--tags tags">
+		<i class="fa fa-tags fa-1" style="font-size: inherit; margin-right: 5px;"></i>	
+		{{#foreach tags}}
+			<a href="{{url}}#blog" title="{{name}}">{{name}}</a>
+			{{#if @last}}{{else}}, {{/if}}
+		{{/foreach}}
+	    </span>
+	    <a class="btn-border-small" href={{url}}>继续阅读</a>
         </div>
         <hr class="post-list__divider" />
       </li>
