--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,4 +1,4 @@
 <footer class="footer">
     <span class="footer__copyright">&copy; {{date format="YYYY"}}  All rights reserved.</span>
-    <span class="footer__copyright"><a href="https://github.com/Q-E-D/xno">xno</a> theme by <a href="http://nixi.im">@低调的</a></span>
-</footer>酱油党
+    <span class="footer__copyright"><a href="https://github.com/Q-E-D/xno">xno</a> theme by <a href="http://nixi.im">@低调的酱油党</a></span>
+</footer>
